syntax = "proto3";

option go_package = "./escposgrpcservice";
option java_multiple_files = true;
option java_package = "de.svgas100.escposservice";
option java_outer_classname = "EscPosGrpcServiceProto";

package escposgrpcservice;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}